--- a/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_2_algebraische_koerpererweiterungen.tex
+++ b/Math-Ba-ALGZTH/ALGZTH_Vorlesung/algzth_1_2_algebraische_koerpererweiterungen.tex
@@ -21,10 +21,8 @@ Sei $L | K$ eine Körpererweiterung.
     Genau dann ist $\alpha \in L$ algebraisch über $K$, wenn $1, \alpha, \alpha^2 , \dots$ $K$-linear abhängig sind.
 \end{lemma}
 \begin{proof}
-    Für $\lambda_0 , \lambda_1 , \dots \in K$, fast alle gleich Null, so ist
-    \begin{equation*}
-        \sum_{i=0}^\infty \lambda_i \alpha^i \equivalent f(\alpha) = 0 \text{ für } f = \sum_{i=0}^\infty \lambda_i X^i \in \polynom[K]
-    \end{equation*}
+    Für $\lambda_0 , \lambda_1 , \dots \in K$, fast alle gleich Null, ist
+    $\sum_{i=0}^\infty \lambda_i \alpha^i \equivalent f(\alpha) = 0$ für $f = \sum_{i=0}^\infty \lambda_i X^i \in \polynom[K]$.
 \end{proof}
 
 \begin{lemma}
