--- a/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
+++ b/texmf/tex/latex/exercisesMathTUD/exercisesMathTUD.sty
@@ -110,7 +110,7 @@
                 \end{minipage}%
                 \begin{minipage}{\dimexpr0.5\linewidth-\fboxrule-\fboxsep}
                     \flushright \textbf{\thename} (Matr.-Nr. \thematnr)\\
-                    Ü-Gruppe: \thegroup
+                    {Ü-Gruppe: \thegroup}
                 \end{minipage}%
         }}%
     }%
