--- a/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
+++ b/Math-Ba-STOCH/STOCH_Hausaufgaben/stoch_hausaufgaben_main.tex
@@ -42,7 +42,8 @@
 \period{Sommersemester 2019}
 
 \tutor{Apostolos Sideris}
-\group{\empty}
+\group{Apostolos Sideris}
+
 
 \lecturer{Prof. Dr. Anita Behme}
 \faculty{Mathematik}
@@ -55,6 +56,11 @@
 \undef\folge
 \NewDocumentCommand{\folge}{m O{n \in \N}}{\left( #1 \right)_{#2}}
 \renewcommand{\complement}{\mathsf{C}}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+\lfoot{\osfamily \textcolor{cdgray}{\footnotesize \thename~(Matr.-Nr.: \thematnr)}}{\rightmark}
+\pagestyle{fancy}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
